      was flawed and could cause crashes. In most (all?) cases, 
      there is a reasonable, if not better, alternate way to 
      accomplish the same thing.
    * Added grid sample that was ported by shanko (Thanks!)
    * Fixed crash in TreeCtrl#on_compare_items
      (it could be reproduced in the treectrl sample by inserting 
       GC.start at the beginning of the DoSortChildren method)

2004-05-29
    * Add support for ComboBox#get_value
    

2004-04-23
    * In splitter sample, rename OnDraw to on_draw so it will work
    * Fix big bug in ScrolledWindow that caused splitter sample to 
      crash immediately
    * NOTE: The following classes have known problems that may cause 
      crashes if you use set_client_data and/or get_client_data: 
        Choice, ComboBox, CommandEvent, SocketEvent, EvtHandler,
        ListBox, Socket
    * NOTE: The following classes have known problems that may cause 
      crashes if you use these methods:
      - Event (get_event_object)
      - ListCtrl (on_get_item_attr, on_get_item_image, on_get_item_text)
      - TreeCtrl (on_compare_items)
      

2004-04-17
    * Minor updates to README files
    * Tagged tree as 0.3.0
    

2004-03-29
    * Update samples to use correct method names:
      dialogs/dialog.rb: CanVeto -> can_veto
      artprov/artprov.rb: CreateBitmap -> create_bitmap
    * Add note to controls/controls.rb sample explaining that 
      the current get/set_client_data can segfault


2004-03-24
    * Gentoo ebuild fixed (added DESTDIR & sed trickery)
      [Submitted by Gour]
      

2004-03-14
    * Fixed listctrl sample to use new naming for on_xxx callbacks
    * ListCtrl no longer requires subclasses to implement on_get_item_attr,
      to match the documentation. 
      A ListCtrl using virtual mode must still override on_get_item_text. 
      A ListCtrl that is virtual AND has an image list must override 
      on_get_item_image
    * Added MDI support, and an MDI sample
    

2004-03-14 02:00